Style: added further styling to navbar links

--- a/styles.css
+++ b/styles.css
@@ -90,3 +90,13 @@
     background: #f77062;
     color: #fff;
 }
+
+.button:hover {
+    background: #4837ff;
+    transition: all 0.3s ease;
+}
+
+.navbar__links:hover {
+    color: #f77062;
+    transition: all 0.3s ease;
+}
