--- a/styles.css
+++ b/styles.css
@@ -395,9 +395,9 @@
     color: #fff;
 }
 
-.services__card:nth-child(2) {
+/* .services__card:nth-child(2) {
     background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17,0.6) 100%), url(/images/pic4.jpg);
-}
+} */
 
 .services h2 {
     position: absolute;
